[package]
name = "client"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = { git = "https://github.com/enarx/ciborium" }
config = "0.10.1"
franca = { path = "../franca" }
koine = { path = "../koine" }
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
